<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serial</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="johan@todo.todo">johan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- 编译依赖-->
  <build_depend>rosidl_default_generators</build_depend>
  <!-- 执行依赖-->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- 声明当前包所属功能组-->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>